k8s/local-ingress/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 80
      targetPort: 80
